--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,12 @@
 @import './fonts.css';
 
-div {
+body {
+    width: 100vw;
+    height: 100vh;
     font-family: "Roboto", sans-serif;
-    font-weight: 700;
+    margin: 0px;
+}
+
+.container {
+    padding: 0 340px;
 }
