--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,8 +5,37 @@ body {
     height: 100vh;
     font-family: "Roboto", sans-serif;
     margin: 0px;
+    color: #000000;
 }
 
 .container {
     padding: 0 340px;
+}
+
+.header {
+    height: 867px;
+    background: no-repeat right url(../images/header-background.png);
+    overflow: hidden;
+}
+
+.label {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 680px;
+    height: 80px;
+}
+
+.label-button {
+    width: 193px;
+    height: 52px;
+    border: none;
+    border-radius: 5px;
+    background: #ffffff;
+    font-family: "roboto";
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 28px;
+    cursor: pointer;
 }
