--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,15 @@ body {
     margin: 0px;
     color: #000000;
 }
+button {
+    font-family: "roboto";
+    border: none;
+    cursor: pointer;
+}
+
+h1, h2 {
+    margin: 0;
+}
 
 .container {
     padding: 0 340px;
@@ -30,12 +39,52 @@ body {
 .label-button {
     width: 193px;
     height: 52px;
-    border: none;
     border-radius: 5px;
-    background: #ffffff;
-    font-family: "roboto";
+    background-color: #ffffff;
     font-size: 24px;
     font-weight: 400;
     line-height: 28px;
-    cursor: pointer;
+}
+
+.title {
+    font-weight: 500;
+    font-size: 64px;
+    line-height: 75px;
+}
+
+.header-title {
+    font-weight: 700;
+    font-size: 72px;
+    line-height: 84px;
+    margin-top: 225px;
+}
+
+.subtitle {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+}
+
+.header-subtitle {
+    margin-top: 20px;
+}
+
+.header-button {
+    background-color: #F9E059;
+    width: 398px;
+    height: 77px;
+    margin-top: 48px;
+    border-radius: 5px;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.text-header {
+    width: 383px;
+    height: 42px;
+    size: 18px;
+    font-weight: 400;
+    margin-top: 24px;
+    line-height: 21px;
+    color: #656565;
 }
