--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,3 +99,27 @@ h1, h2 {
 .subtitle span {
     font-weight: 700;
 }
+
+.advantages {
+    margin-top: 120px;
+}
+
+.advantages-block {
+    width: 100%;
+    height: 200px;
+    border-radius: 15px;
+    margin-top: 20px;
+    background-color: #EDEFF1;
+    padding: 20px 0px 0px 20px;
+}
+
+.advantages-title {
+    font-size: 30px;
+    font-weight: 500;
+} 
+
+.advantages-text {
+    font-weight: 400;
+    font-size: 18px;
+    margin-top: 16px;
+}
