--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,9 @@
 @import './fonts.css';
 
+* > .advantages-block {
+    box-sizing: border-box;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -105,11 +109,12 @@ h1, h2 {
 }
 
 .advantages-block {
+    position: relative;
     height: 200px;
     border-radius: 15px;
     background-color: #EDEFF1;
     padding: 20px 0px 0px 20px;
-    flex-grow: 1;
+    flex: 1;
 }
 
 .advantages-title {
@@ -133,4 +138,10 @@ h1, h2 {
 .advantages-block:first-child {
     flex-basis: 100%;
     background-color: #F9E059;
+}
+
+.advantages-image {
+    position: absolute;
+    top: 0;
+    right: 0;
 }
